--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
+    <!-- Oude versie van Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script defer>
         document.addEventListener("DOMContentLoaded", () => {
             const firebaseConfig = {
-                apiKey: "", 
+                apiKey: "", // Geen API Key nodig zonder Web App
                 authDomain: "slimste-kameraad-timer.firebaseapp.com",
                 databaseURL: "https://slimste-kameraad-timer-default-rtdb.europe-west1.firebasedatabase.app",
                 projectId: "slimste-kameraad-timer",
                 storageBucket: "slimste-kameraad-timer.appspot.com",
                 messagingSenderId: "37865286019",
-                appId: "" 
+                appId: "" // Geen Web App ID nodig
             };
 
             const app = firebase.initializeApp(firebaseConfig);
@@ -27,7 +28,7 @@
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
-            // Audio elementen voor timer geluid en stopgeluid
+            // Audio elementen voor timer geluiden
             const timerSound = document.getElementById("timerSound");
             const stopSound = document.getElementById("stopSound");
 
@@ -36,18 +37,41 @@
                 const view = params.get('view');
                 if (view === 'display') {
                     const elementsToHide = document.querySelectorAll('.hide-if-needed');
-                    elementsToHide.forEach(el => el.style.display = 'none');
-                    document.querySelectorAll(".timer").forEach((el) => el.style.pointerEvents = "none");
-                    document.querySelectorAll(".team-name").forEach((el) => el.style.pointerEvents = "none");
+                    elementsToHide.forEach(el => {
+                        el.style.display = 'none';
+                    });
+
+                    document.querySelectorAll(".timer").forEach((el) => {
+                        el.style.pointerEvents = "none";
+                    });
+
+                    document.querySelectorAll(".team-name").forEach((el) => {
+                        el.style.pointerEvents = "none";
+                    });
+
                     const teamInputElements = document.querySelectorAll(".team-input");
-                    teamInputElements.forEach((el) => el.setAttribute("disabled", "true"));
+                    teamInputElements.forEach((el) => {
+                        el.setAttribute("disabled", "true");
+                    });
+
                 } else {
                     const elementsToShow = document.querySelectorAll('.hide-if-needed');
-                    elementsToShow.forEach(el => el.style.display = 'block');
-                    document.querySelectorAll(".timer").forEach((el) => el.style.pointerEvents = "auto");
-                    document.querySelectorAll(".team-name").forEach((el) => el.style.pointerEvents = "auto");
+                    elementsToShow.forEach(el => {
+                        el.style.display = 'block';
+                    });
+
+                    document.querySelectorAll(".timer").forEach((el) => {
+                        el.style.pointerEvents = "auto";
+                    });
+
+                    document.querySelectorAll(".team-name").forEach((el) => {
+                        el.style.pointerEvents = "auto";
+                    });
+
                     const teamInputElements = document.querySelectorAll(".team-input");
-                    teamInputElements.forEach((el) => el.removeAttribute("disabled"));
+                    teamInputElements.forEach((el) => {
+                        el.removeAttribute("disabled");
+                    });
                 }
             }
 
@@ -59,6 +83,7 @@
                     if (timerElement) {
                         timerElement.textContent = tijd;
                     }
+
                     const teamNaamEl = document.getElementById(`team-name-${index}`);
                     if (teamNaamEl) {
                         if (teamNaamEl.tagName.toLowerCase() === "input") {
@@ -73,6 +98,7 @@
                             teamNaamEl.addEventListener("click", () => maakTeamnaamBewerkbaar(index));
                         }
                     }
+
                     document.getElementById(`timer-container-${index}`).style.display = zichtbareTimers[index] ? "block" : "none";
                 });
             }
@@ -87,7 +113,7 @@
                 selectedTimerRef.set(index);
             }
 
-            // Start de timer en speel het geluid af
+            // Start de timer en speel het timer-sound geluid af
             function startTimer() {
                 if (intervals[geselecteerdeTimer]) return;
                 intervals[geselecteerdeTimer] = setInterval(() => {
@@ -98,20 +124,20 @@
                     }
                 }, 1000);
 
-                // Speel het timer sound geluid af bij starten
+                // Speel het timer geluid af wanneer de timer start
                 timerSound.play().catch((error) => {
                     console.log("Audio kon niet worden afgespeeld:", error);
                 });
             }
 
-            // Stop de timer, stop het timer-geluid en speel het stop-geluid af
+            // Stop de timer en speel het stop-sound geluid af
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
 
-                // Stop het timer geluid
-                timerSound.pause();
-                timerSound.currentTime = 0; // Zet het timer geluid terug naar het begin
+                // Stop het timer geluid op het apparaat in de 'view=display' modus
+                timerSound.pause();  // Stop het timer geluid
+                timerSound.currentTime = 0;  // Zet het timer geluid terug naar het begin
 
                 // Speel het stop geluid af na een korte vertraging
                 setTimeout(() => {
@@ -161,6 +187,7 @@
 
             function maakTeamnaamBewerkbaar(index) {
                 let naamLabel = document.getElementById(`team-name-${index}`);
+
                 if (naamLabel && naamLabel.tagName.toLowerCase() !== "input") {
                     let inputVeld = document.createElement("input");
                     inputVeld.type = "text";
@@ -277,6 +304,7 @@
                     }
                 });
 
+                // Voeg de timerVisibility toe in Firebase
                 const visibilityRef = firebase.database().ref('timerVisibility');
                 visibilityRef.once('value', (snapshot) => {
                     if (!snapshot.exists()) {
@@ -292,7 +320,7 @@
 
             checkAndInitializeDatabase();
             syncTimers();
-            syncVisibility();
+            syncVisibility();  // Voeg deze regel toe
 
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
@@ -432,15 +460,15 @@
         </div>
     </div>
 
-    <!-- Voeg het audio element toe -->
-    <audio id="timerSound" preload="auto">
-        <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/timer-sound.mp3" type="audio/mp3">
+    <!-- Voeg het audio element toe voor de stop geluidsafspeling -->
+    <audio id="stopSound" preload="auto">
+        <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/timer-sound-end.mp3" type="audio/mp3">
         Je browser ondersteunt het afspelen van audio niet.
     </audio>
 
-    <!-- Voeg het stop geluid toe -->
-    <audio id="stopSound" preload="auto">
-        <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/timer-sound-end.mp3" type="audio/mp3">
+    <!-- Voeg het audio element toe voor de timer geluidsafspeling -->
+    <audio id="timerSound" preload="auto">
+        <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/timer-sound.mp3" type="audio/mp3">
         Je browser ondersteunt het afspelen van audio niet.
     </audio>
 
