--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
-            // Audio elementen voor timer geluiden
+            // Audio elementen voor beide geluiden
             const timerSound = document.getElementById("timerSound");
-            const stopSound = document.getElementById("stopSound");
+            const timerEndSound = document.getElementById("timerEndSound");
 
             function hideIfNeeded() {
                 const params = new URLSearchParams(window.location.search);
@@ -113,7 +113,7 @@
                 selectedTimerRef.set(index);
             }
 
-            // Start de timer en speel het timer-sound geluid af
+            // Start de timer en speel het geluid af
             function startTimer() {
                 if (intervals[geselecteerdeTimer]) return;
                 intervals[geselecteerdeTimer] = setInterval(() => {
@@ -124,24 +124,23 @@
                     }
                 }, 1000);
 
-                // Speel het timer geluid af wanneer de timer start
+                // Speel het geluid af wanneer de timer start
                 timerSound.play().catch((error) => {
                     console.log("Audio kon niet worden afgespeeld:", error);
                 });
             }
 
-            // Stop de timer en speel het stop-sound geluid af
+            // Stop de timer en stop het geluid, speel het stop geluid af
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
 
-                // Stop het timer geluid
-                timerSound.pause();
-                timerSound.currentTime = 0;  // Zet het timer geluid terug naar het begin
-
-                // Speel het stop geluid af na een korte vertraging
-                stopSound.play().catch((error) => {
-                    console.log("Stop geluid kon niet worden afgespeeld:", error);
+                // Stop het geluid op het apparaat in de 'view=display' modus
+                timerSound.pause();  // Stop het timer-geluid
+                timerSound.currentTime = 0;  // Zet het geluid terug naar het begin
+                // Speel het stop geluid af
+                timerEndSound.play().catch((error) => {
+                    console.log("Stopgeluid kon niet worden afgespeeld:", error);
                 });
             }
 
@@ -458,9 +457,13 @@
         </div>
     </div>
 
-    <!-- Voeg het audio element toe voor de stop geluidsafspeling -->
-    <audio id="stopSound" preload="auto">
-        <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/timer-sound-end.mp3" type="audio/mp3">
+    <!-- Voeg het audio element toe voor de timer en stop geluid -->
+    <audio id="timerSound" preload="auto">
+        <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/timer-sound.mp3" type="audio/mp3">
+        Je browser ondersteunt het afspelen van audio niet.
+    </audio>
+    <audio id="timerEndSound" preload="auto">
+        <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/audio/timer-sound-end.mp3" type="audio/mp3">
         Je browser ondersteunt het afspelen van audio niet.
     </audio>
 
