--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     }
                 }, 1000);
 
-                // Speel het geluid af op de tweede pagina via Firebase
+                // Speel het geluid af op de displaypagina via Firebase
                 const playSoundRef = firebase.database().ref('playSound');
                 playSoundRef.set(true);  // Zet de waarde op true om geluid af te spelen
             }
@@ -134,13 +134,13 @@
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
 
+                // Trigger het stopgeluid via Firebase voor de displaypagina
+                const stopSoundRef = firebase.database().ref('playStopSound');
+                stopSoundRef.set(true);  // Zet de waarde op true om stopgeluid af te spelen
+
                 // Stop het geluid op het apparaat in de 'view=display' modus
                 timerSound.pause();  // Stop het timer-geluid
                 timerSound.currentTime = 0;  // Zet het geluid terug naar het begin
-                // Speel het stop geluid af
-                timerEndSound.play().catch((error) => {
-                    console.log("Stopgeluid kon niet worden afgespeeld:", error);
-                });
             }
 
             function resetTimer() {
